--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      command: "create_default_setup"
       args:
         USER_ID: ${USER_ID:?"Please run as follows 'USER_ID=$(id -u)'"}
         GROUP_ID: ${GROUP_ID:?"Please run as follows 'GROUP_ID=$(id -g)'"}
