--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,6 +9,8 @@ services:
       args:
         USER_ID: ${USER_ID:?"Please run as follows 'USER_ID=$(id -u)'"}
         GROUP_ID: ${GROUP_ID:?"Please run as follows 'GROUP_ID=$(id -g)'"}
+        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     environment:
       LOGGER_AGENT_ENABLED: "yes"
     networks:
