--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -39,9 +39,15 @@ jobs:
           # Build the entrypoint for our docker image
           docker build . --file Dockerfile -t script-builder
           docker run -v $(pwd)/app:/usr/app --name builder script-builder
+          echo "Execution ends here"
           ls app/dist
-#          sudo chmod -R +x+r app
-#          sudo chown -R $CURRENT_UID bin
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: "snapshots.laraboot.io"
+          destination_dir: 'laravel-images'
+          source_dir: 'app/dist'
       - name: Archive script artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -50,10 +56,4 @@ jobs:
             app/dist/default.zip
             app/dist/inertia.zip
             app/dist/breeze.zip
-      - uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: "snapshots.laraboot.io"
-          destination_dir: 'laravel-images'
-          source_dir: 'app/dist'
+
