--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -35,12 +35,13 @@ jobs:
           export USER_ID="$(id -u)"
           export GROUP_ID="$(id -g)"
           export CURRENT_UID=$USER_ID:$GROUP_ID
-          mkdir -p app/dist
           # Build the entrypoint for our docker image
           docker build . --file Dockerfile -t script-builder
-          docker run -v $(pwd)/app/dist:/usr/app/dist --name builder script-builder
+          mkdir -p app/dist
+          docker run -v $(pwd)/app:/usr/app --name builder script-builder
           echo "Execution ends here"
-          ls app/dist
+          echo "List dist directory"
+          ls -lth app/dist
       - uses: shallwefootball/s3-upload-action@master
         with:
           aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
