--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Setup laravel installer
         run: |
           composer global require laravel/installer
+          export PATH="$HOME/.config/composer/vendor/bin:$HOME/.composer/vendor/bin:$PATH"
       - name: Create laravel application
         run: |
           laravel new apps
