--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Create laravel application
         run: |
           export PATH="/home/runner/.composer/vendor/bin:$HOME/.config/composer/vendor/bin:$HOME/.composer/vendor/bin:$PATH"
-          laravel new app && cd app
+          laravel new app
       #      - name: Install NPM packages
       #        if: steps.node_modules-cache.outputs.cache-hit != 'true'
       #        run: npm ci
@@ -67,6 +67,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
       - name: Get Composer Cache Directory 2
+        working-directory: ./app
         id: composer-cache
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
