--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - features/**
 
 jobs:
-  laravel-tests:
+  build:
     runs-on: ubuntu-latest
     # Service container Mysql mysql
     services:
@@ -112,11 +112,6 @@ jobs:
 
         run: php artisan migrate
 
-      - name: Show dir
-        run: pwd
-      - name: PHP Version
-        run: php --version
-
       # Code quality
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         working-directory: ./app
@@ -128,7 +123,82 @@ jobs:
           DB_USER: rootf
 
         run: vendor/bin/phpunit --testdox
-
+      - name: Package
+        working-directory: ./app
+        id: build
+        run: |
+          tar -czf /tmp/app.tar.gz .
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: app
+          path: /tmp/app.tar.gz
+  publish:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.2.0
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          fetch-depth: 0
+      - uses: GoogleCloudPlatform/release-please-action@v2
+        id: release
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          release-type: simple
+          command: release-pr
+          package-name: "laravel-snapshot"
+          bump-minor-pre-major: false
+      - name: Download app artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: app
+      - run: |
+          tar -xzf app.tar.gz -C .
+          rm app.tar.gz
+      #      - uses: webfactory/ssh-agent@v0.5.2
+      #        with:
+      #          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: push package release
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          git remote set-url origin "$(git config --get remote.origin.url | sed 's#http.*com/#git@github.com:#g')"
+          git config --local user.email "$(git log --format='%ae' HEAD^!)"
+          git config --local user.name "$(git log --format='%an' HEAD^!)"
+          git checkout -b 1.x
+          git add dist
+          git commit -a -m 'chore: ${{ steps.release.outputs.tag_name }} release'
+          git push -f --set-upstream origin 1.x
+      - name: Get Previous tag
+        id: previoustag
+        if: ${{ steps.release.outputs.release_created }}
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Get next minor version
+        id: semvers
+        if: ${{ steps.release.outputs.release_created }}
+        uses: WyriHaximus/github-action-next-semvers@v1
+        with:
+          version: ${{ steps.previoustag.outputs.tag }}
+      - name: Output next version
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo  "version: ${{ steps.semvers.outputs.patch }}"
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '15.x'
+      - name: Semantic Release
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          npx semantic-release --debug --ci false
       #      - name: Execute Code Sniffer via phpcs
       #        working-directory: ./app
       #        run: |
