--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,7 +141,7 @@ jobs:
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.ORG_TOKEN }}
           release-type: simple
           command: release-pr
           package-name: "laravel-snapshot"
@@ -171,7 +171,7 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         uses: WyriHaximus/github-action-get-previous-tag@v1
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.ORG_TOKEN }}"
       - name: Get next minor version
         id: semvers
         if: ${{ steps.release.outputs.release_created }}
