--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,6 +156,13 @@ jobs:
       #      - uses: webfactory/ssh-agent@v0.5.2
       #        with:
       #          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          delete_release: true # default: false
+          tag_name: v0.1.0 # tag name to delete
+          repo: laraboot-io/laravel-images
+        env:
+          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
       - name: push package release
         if: ${{ steps.release.outputs.release_created }}
         run: |
