chore: tag right

--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -4,15 +4,7 @@ on:
   push:
     # Publish `master` as Docker `latest` image.
     branches:
-      - dev
-      - feature/*
-
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
-
-  # Run tests for any PRs.
-  pull_request:
+      - feature/docker-*
 
 env:
   IMAGE_NAME: builder
