--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,6 +148,11 @@ jobs:
         flavor: [ '--full', '--with-breeze','--with-jetstream' ]
     steps:
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
+      - uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '15.x'
       - name: Download base artifact
         uses: actions/download-artifact@v2
         with:
