--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,6 +176,15 @@ jobs:
           sudo chmod 666 /var/run/docker.sock
           chmod +x ./scripts/features.sh
           LARAVEL_DIR_APP="${cwd}/${dirname}" ./scripts/features.sh "--${{ matrix.flavor }}"
+
+          pushd ${cwd}/${dirname}/${{ matrix.flavor }}
+          tar -czf /tmp/app-${{ matrix.flavor }}.tar.gz .
+          popd
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-with-${{ matrix.flavor }}
+          path: /tmp/app-${{ matrix.flavor }}.tar.gz
   publish:
     needs:
       - features
