--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,7 +203,7 @@ jobs:
         run: |
           #!/usr/bin/env bash
           set -euo pipefail
-          VERSION="$(cat version.txt)"
+          VERSION="$(cat artifacts/version.txt)"
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: GoogleCloudPlatform/release-please-action@v2
@@ -225,5 +225,5 @@ jobs:
         with:
           allowUpdates: true
           tag: ${{ steps.dist.outputs.version }}
-          artifacts: "app.tar.gz,foo/*.txt"
+          artifacts: "artifacts/*.tar.gz"
           token: ${{ secrets.ORG_TOKEN }}
