--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -209,7 +209,7 @@ jobs:
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
         with:
-          token: ${{ secrets.ORG_TOKEN }}
+          token: ${{ secrets.PUBLIC_REPO_TOKEN }}
           release-type: simple
           command: release-pr
           package-name: "laravel-snapshot"
