--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,7 +184,7 @@ jobs:
           tar -czf /tmp/${{ matrix.flavor }}.tar.gz .
           popd
 
-          ls /tmp/app-${{ matrix.flavor }}.tar.gz
+          ls /tmp/${{ matrix.flavor }}.tar.gz
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
@@ -209,7 +209,7 @@ jobs:
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
         with:
-          token: ${{ secrets.PUBLIC_REPO_TOKEN }}
+          token: ${{ secrets.RELEASE_TOKEN }}
           release-type: simple
           command: release-pr
           package-name: "laravel-snapshot"
@@ -220,7 +220,7 @@ jobs:
           tag_name: ${{ steps.dist.outputs.version }}
           repo: laraboot-io/laravel-images
         env:
-          GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
