--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -205,7 +205,7 @@ jobs:
           set -euo pipefail
           shopt -s globstar
           VERSION="$(cat artifacts/version/version.txt)"
-          md5sum **/*.tar.gz > checksums.md5
+          find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
