--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -206,6 +206,7 @@ jobs:
           shopt -s globstar
           VERSION="$(cat artifacts/version/version.txt)"
           find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
+          find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
