--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -230,6 +230,8 @@ jobs:
           allowUpdates: true
           # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
           #          bodyFile: notes.md
+          omitBody: true
           tag: ${{ steps.dist.outputs.version }}
-          artifacts: "artifacts/*.tar.gz,artifacts/**/*.tar.gz,checksums.md5"
+          artifacts: "artifacts/**/*.tar.gz,checksums.md5"
+          removeArtifacts: true
           token: ${{ secrets.RELEASE_TOKEN }}
