--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -208,6 +208,8 @@ jobs:
           find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
           find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
+          touch release.md
+          echo "# ${VERSION}" >> release.md
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: GoogleCloudPlatform/release-please-action@v2
@@ -230,6 +232,7 @@ jobs:
           allowUpdates: true
           # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
           #          bodyFile: notes.md
+          bodyFile: release.md
           omitBody: true
           tag: ${{ steps.dist.outputs.version }}
           artifacts: "artifacts/**/*.tar.gz,checksums.md5"
