--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -209,7 +209,7 @@ jobs:
           find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
           touch release.md
-          echo "# ${VERSION}" >> release.md
+          echo "### 🧙 ${VERSION} " >> release.md
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: GoogleCloudPlatform/release-please-action@v2
