--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -228,7 +228,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - uses: ncipollo/release-action@v1
-        id: release
+        id: xrelease
         with:
           allowUpdates: true
           # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
@@ -239,6 +239,6 @@ jobs:
           removeArtifacts: true
           token: ${{ secrets.RELEASE_TOKEN }}
       - run: |
-          echo ${{ steps.release.outputs.id }}
-          echo ${{ steps.release.outputs.html_url }}
-          echo ${{ steps.release.outputs.upload_url }}
+          echo ${{ steps.xrelease.outputs.id }}
+          echo ${{ steps.xrelease.outputs.html_url }}
+          echo ${{ steps.xrelease.outputs.upload_url }}
