--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,14 +212,6 @@ jobs:
           echo "### 🧙 ${VERSION} " >> release.md
           echo "::set-output name=version::$VERSION"
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
-      - uses: GoogleCloudPlatform/release-please-action@v2
-        id: release
-        with:
-          token: ${{ secrets.RELEASE_TOKEN }}
-          release-type: simple
-          command: release-pr
-          package-name: "laravel-snapshot"
-          bump-minor-pre-major: false
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
           delete_release: true # default: false
@@ -239,6 +231,23 @@ jobs:
           removeArtifacts: true
           token: ${{ secrets.RELEASE_TOKEN }}
       - run: |
-          echo ${{ steps.xrelease.outputs.id }}
-          echo ${{ steps.xrelease.outputs.html_url }}
-          echo ${{ steps.xrelease.outputs.upload_url }}
+          readonly releaseid=${{ steps.xrelease.outputs.id }}
+          readonly releaselink=echo ${{ steps.xrelease.outputs.html_url }}
+          jq '.releases[.releases| length] |= . + {"name": "${{ steps.dist.outputs.version }}", "link": "$releaselink"}' registry.json > registry-mod.json
+          mv registry-mod.json registry.json
+          cat registry.json
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: LarabootBot
+          author_email: no-reply@laraboot.io
+          message: 'chore: Release-As: ${{ steps.dist.outputs.version }}'
+          add: '*.json'
+      - uses: GoogleCloudPlatform/release-please-action@v2
+        id: release
+        with:
+          token: ${{ secrets.RELEASE_TOKEN }}
+          release-type: simple
+          command: release-pr
+          package-name: "laravel-images"
+          bump-minor-pre-major: false
