--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,6 +242,7 @@ jobs:
           author_name: LarabootBot
           author_email: no-reply@laraboot.io
           message: 'chore: Release-As: ${{ steps.dist.outputs.version }}'
+          push: false
           add: '*.json'
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
