--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,7 +242,7 @@ jobs:
         with:
           author_name: LarabootBot
           author_email: no-reply@laraboot.io
-          message: 'Release-As: ${{ steps.dist.outputs.version }}'
+          message: 'minor(release): Release-As ${{ steps.dist.outputs.version }}'
           push: false
           add: 'registry.json'
       - uses: GoogleCloudPlatform/release-please-action@v2
