--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,11 @@ on:
     - cron: "0 * * * *"
   push:
     branches:
-      - dev
-      - feature/**
+      - main
+      - master
 
 jobs:
-  build:
+  base:
     runs-on: ubuntu-latest
     # Service container Mysql mysql
     services:
@@ -138,21 +138,26 @@ jobs:
         with:
           name: version
           path: /tmp/version.txt
-  publish:
+  features:
     needs:
-      - build
+      - base
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        operating-system: [ ubuntu-latest ]
+        flavor: [ 'full', 'with-breeze','with-jetstream' ]
     steps:
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
-      - uses: GoogleCloudPlatform/release-please-action@v2
-        id: release
+      - uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          token: ${{ secrets.ORG_TOKEN }}
-          release-type: simple
-          command: release-pr
-          package-name: "laravel-snapshot"
-          bump-minor-pre-major: false
-      - name: Download app artifact
+          node-version: '15.x'
+      - name: Install PHP versions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+      - name: Download base artifact
         uses: actions/download-artifact@v2
         with:
           name: app
@@ -160,22 +165,91 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: version
+      - id: flavor
+        run: |
+          #!/usr/bin/env bash
+          set -euo pipefail
+          dirname=${{ matrix.flavor }}
+          mkdir -p $dirname
+          cwd=$(pwd)
+          # Untar base app
+          tar -zxf app.tar.gz -C $dirname
+          sudo chmod 666 /var/run/docker.sock
+          chmod +x ./scripts/features.sh
+          export LARAVEL_DIR_APP="${cwd}/${dirname}"
+
+          ./scripts/features.sh "--${{ matrix.flavor }}"
+
+          pushd ${cwd}/${dirname}
+          tar -czf /tmp/${{ matrix.flavor }}.tar.gz .
+          popd
+
+          ls /tmp/${{ matrix.flavor }}.tar.gz
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.flavor }}
+          path: /tmp/${{ matrix.flavor }}.tar.gz
+  publish:
+    needs:
+      - features
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: artifacts
       - id: dist
         run: |
           #!/usr/bin/env bash
           set -euo pipefail
-          VERSION="$(cat version.txt)"
+          shopt -s globstar
+          VERSION="$(cat artifacts/version/version.txt)"
+          find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
+          find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
+          curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
+          touch release.md
+          echo "### 🧙 ${VERSION} " >> release.md
           echo "::set-output name=version::$VERSION"
+      - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
           delete_release: true # default: false
           tag_name: ${{ steps.dist.outputs.version }}
           repo: laraboot-io/laravel-images
         env:
-          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - uses: ncipollo/release-action@v1
+        id: xrelease
         with:
           allowUpdates: true
+          # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
+          #          bodyFile: notes.md
+          bodyFile: release.md
           tag: ${{ steps.dist.outputs.version }}
-          artifacts: "app.tar.gz,foo/*.txt"
-          token: ${{ secrets.ORG_TOKEN }}
+          artifacts: "artifacts/**/*.tar.gz,checksums.*"
+          removeArtifacts: true
+          token: ${{ secrets.RELEASE_TOKEN }}
+      - uses: actions/checkout@v2
+      - run: |
+          readonly releaseid="${{ steps.xrelease.outputs.id }}"
+          readonly releaselink="${{ steps.xrelease.outputs.html_url }}"
+          jq '.releases[.releases| length] |= . + {"name": "${{ steps.dist.outputs.version }}", "link": "$releaselink"}' registry.json > registry-mod.json
+          mv registry-mod.json registry.json
+          cat registry.json
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: LarabootBot
+          author_email: no-reply@laraboot.io
+          message: 'minor(release): Release-As ${{ steps.dist.outputs.version }}'
+          push: false
+          add: 'registry.json'
+      - uses: GoogleCloudPlatform/release-please-action@v2
+        id: release
+        with:
+          token: ${{ secrets.RELEASE_TOKEN }}
+          release-type: simple
+          command: release-pr
+          package-name: "laravel-images"
+          bump-minor-pre-major: false
