wip: simple build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Create laravel application
         run: |
           export PATH="/home/runner/.composer/vendor/bin:$HOME/.config/composer/vendor/bin:$HOME/.composer/vendor/bin:$PATH"
-          laravel new app
+          laravel new app --php-version=${{ matrix.php-versions }}
       #      - name: Install NPM packages
       #        if: steps.node_modules-cache.outputs.cache-hit != 'true'
       #        run: npm ci
