--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.0','7.4' ]
+        php-versions: [ '8.0','8.1' ]
         dependency-stability: [ 'prefer-stable' ]
 
     name: P${{ matrix.php-versions }} - L${{ matrix.laravel }} - ${{ matrix.dependency-stability }} - ${{ matrix.operating-system}}
@@ -56,7 +56,7 @@ jobs:
       - name: Create laravel application
         run: |
           export PATH="/home/runner/.composer/vendor/bin:$HOME/.config/composer/vendor/bin:$HOME/.composer/vendor/bin:$PATH"
-          laravel new app --php-version=${{ matrix.php-versions }}
+          laravel new app
       #      - name: Install NPM packages
       #        if: steps.node_modules-cache.outputs.cache-hit != 'true'
       #        run: npm ci
