--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -227,7 +227,9 @@ jobs:
         run: |
           ls -ltah
           ls -ltah artifacts
-          aws s3 cp artifacts s3://${{ secrets.AWS_S3_BUCKET }}/artifacts --recursive
+          aws s3 cp artifacts s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/$VERSION --recursive
+          aws s3 cp artifacts/app/app.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/$VERSION/${VERSION}.tar.gz
+          aws s3 cp artifacts/simple/simple.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/$VERSION/${VERSION}-simple.tar.gz
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
